--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,35 +1,10 @@
-<div class="container mx-auto mt-28 px-5 flex">
+<div class="container mx-auto mt-28 px-5 flex items-center">
   <div data-controller='modal' data-modal-modal-value="#personal-data-modal" class="w-full">
     <!-- Button to open the modal -->
     <div class=" text-right justify-center content-center mr-2">
-      <button type="button" class="px-12 py-8 b-1 border border-blue-500 text-blue-500 font-medium text-2xl rounded-xs hover:text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" data-action="click->modal#open">Personal Data</button>
+      <%= link_to 'Personal Data', personal_data_new_path, class:"px-12 py-8 b-1 border border-blue-500 text-blue-500 font-medium text-2xl rounded-xs hover:text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" %>
     </div>
-
-    <!-- Modal -->
-    <div id="personal-data-modal" class="hidden fixed z-10 inset-0 overflow-y-auto">
-      <div class="flex items-center justify-center px-4 pt-4 pb-20 text-center sm:block sm:p-0">
-        <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-          <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
-        </div>
-
-        <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6" role="dialog" aria-modal="true" aria-labelledby="modal-headline">
-          <%= turbo_frame_tag "modal-body" do %>
-            <div>
-              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">Personal Data</h3>
-              <div class="mt-2">
-                <%= render 'personal_data/form', personal_data: @personal_data %>
-              </div>
-            </div>
-
-            <div class="mt-5 sm:mt-6">
-              <button type="button" data-action="click->modal#close" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
-                Close
-              </button>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
+    <%= turbo_frame_tag "person_modal"%>
   </div>
 
   <div data-controller='modal' data-modal-modal-value="#employer-data-modal" class="w-full">
