--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,26 +21,24 @@
         </div>
 
         <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6" role="dialog" aria-modal="true" aria-labelledby="modal-headline">
-            <div>
-              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">Personal Data</h3>
-              <div class="mt-2">
-                <%= turbo_frame_tag "employeeModal" do %>
-                  <%= render 'employers/listing' %>
-                <% end %>
-              </div>
+          <div>
+            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">Personal Data</h3>
+            <div class="mt-2">
+              <%= render 'employers/listing' %>
             </div>
+          </div>
 
-            <div class="mt-5 sm:mt-6">
-              <button type="button" data-action="click->modal#close" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
-                Close
-              </button>
-            </div>
+          <div class="mt-5 sm:mt-6">
+            <button type="button" data-action="click->modal#close" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
+              Close
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<%= turbo_frame_tag "person_listing" do %>
-  <%= render 'personal_data/listing' %>
+<%= turbo_frame_tag "person_data_listing" do %>
+  <%= render 'personal_data/listing' if PersonalData.exists? %>
 <% end %>
