--- a/app/views/personal_data/_form.html.erb
+++ b/app/views/personal_data/_form.html.erb
@@ -1,38 +1,58 @@
-<%= turbo_frame_tag "modalforms" do %>
-  <%= form_with model: @personal_data || PersonalData.new, url: personal_data_create_path, data: { controller: "form-validation", form_validation_target: "form", parsley_validate:"" }, local: true do |form| %>
+<%= turbo_frame_tag "modal_form_section" do %>
+  <%= form_with model: @personal_data || PersonalData.new, url: personal_data_create_path, data: { controller: "form-validation", form_validation_target: "form" }, local: true do |form| %>
     <% if @personal_data&.errors&.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@personal_data.errors.count, "error") %> prohibited this personal data from being saved:</h2>
-        <ul>
-        <% @personal_data.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
+      <div class="bg-red-50 border-l-8 border-red-900 mb-2">
+        <div class="flex items-center">
+          <div class="p-2">
+            <div class="flex items-center">
+              <div class="ml-2">
+                <svg class="h-8 w-8 text-red-900 mr-2 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                </svg>
+              </div>
+              <p class="px-6 py-4 text-red-900 font-semibold text-lg">Please fix the following errors.</p>
+            </div>
+
+            <div class="px-16 mb-4">
+              <% @personal_data.errors.full_messages.each do |msg| %>
+                <li class="text-md font-bold text-red-500 text-sm whitespace-nowrap"><%= msg %></li>
+              <% end %>
+            </div>
+          </div>
+        </div>
       </div>
     <% end %>
+
     <div class="grid gap-y-4 grid-cols-5 grid-rows-5 mx-auto mt-5 ">
        <div class="col-span-1">
         <%= form.label :email %>
       </div>
+
       <div class="col-span-4">
-        <%= form.email_field :email, required: true, id: "email-field", class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm parsley-error',data: { form_validation_target: "emailField", action: 'keyup->form-validation#validateEmail' } %>
+        <%= form.email_field :email, required: true, id: "email-field", class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm',data: { form_validation_target: "emailField", action: 'keyup->form-validation#validateEmail' } %>
         <p data-form-validation-target="errorField" style="color: red;"></p>
       </div>
+
       <div class="col-span-1">
         <%= form.label :first_name %>
       </div>
+
       <div class="col-span-4">
         <%= form.text_field :first_name, maxlength: 25, required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
       </div>
+
       <div class="col-span-1">
         <%= form.label :last_name %>
       </div>
+
       <div class="col-span-4">
         <%= form.text_field :last_name, maxlength: 50, required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
       </div>
+
       <div class="col-span-1">
         <%= form.label :nickname %>
       </div>
+
       <div class="col-span-4">
         <%= form.text_field :nickname, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
       </div>
@@ -40,10 +60,12 @@
       <div class="col-span-1">
         <%= form.label :phone %>
       </div>
+
       <div class="col-span-4">
         <%= form.phone_field :phone, required: true, pattern: "[0-9]{3}-[0-9]{3}-[0-9]{4}", id: "phone-field", data: { form_validation_target: "phoneField" }, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
       </div>
     </div>
+
     <div class="actions">
       <%= form.submit "Save", class: "inline-flex justify-center items-center px-4 py-2 border border-transparent font-medium rounded-md mt-4 text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500", data: { form_validation_target: "submitButton" } %>
     </div>
