--- a/app/views/personal_data/_listing.html.erb
+++ b/app/views/personal_data/_listing.html.erb
@@ -20,7 +20,7 @@
       Phone
     </div>
 
-    <% PersonalData.find_each do |person| %>
+    <% PersonalDatum.find_each do |person| %>
       <div class="p-2 pl-4 border">
         <%= person.first_name %>
       </div>
