--- a/app/views/employers/_form.html.erb
+++ b/app/views/employers/_form.html.erb
@@ -1,7 +1,4 @@
-<%= form_with(model: @employment || Employer.new, local: true) do |form| %>
-  <% if @employment&.errors&.any? %>
-    <%= render "shared/errors", object: @employment %>
-  <% end %>
+<%= form_with(model: @employer || Employer.new, url: employers_path, local: true) do |form| %>
   <div class="grid gap-y-4 grid-cols-5 mx-auto mt-5 ">
     <div class="col-span-1">
       <%= form.label :employer %>
