--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -22,7 +22,7 @@
 
         <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6" role="dialog" aria-modal="true" aria-labelledby="modal-headline">
           <div>
-            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">Personal Data</h3>
+            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">Employer Data</h3>
             <div class="mt-2">
               <%= render 'employers/listing' %>
             </div>
