--- a/app/views/employers/_listing.html.erb
+++ b/app/views/employers/_listing.html.erb
@@ -32,12 +32,9 @@
     </div>
   <% end %>
 
-  <%= render 'employers/form', employer: @employer %>
+  
+  <%= render PersonalDatum.last.present? ? 'employers/nested_form' : 'employers/form', employer: @employer %>
 
   <%= turbo_frame_tag 'employements' %>
-
-  <div class="form-group inline-block mt-4">
-    <%= link_to "Add Employment", new_employer_path, data: { turbo_frame: 'employements' }, class: 'inline items-center px-4 py-2 border border-transparent font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500' %>
-  </div>
 <% end %>
 
