Added check for button to be disable if fields are empty

--- a/app/views/employers/_fields.html.erb
+++ b/app/views/employers/_fields.html.erb
@@ -3,18 +3,18 @@
     <%= form.label :employer %>
   </div>
   <div class="col-span-4">
-    <%= form.text_field :employer, class: 'form-control', required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
+    <%= form.text_field :employer, class: 'form-control', required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm', data: { form_submit_target: "requiredField", action: 'change->form-submit#checkFormValidity' }%>
   </div>
   <div class="col-span-1">
     <%= form.label :date_started %>
   </div>
   <div class="col-span-4">
-    <%= form.date_field :date_started, class: 'form-control datepicker', autocomplete: 'off', required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
+    <%= form.date_field :date_started, class: 'form-control datepicker', autocomplete: 'off', required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm', data: { form_submit_target: "requiredField", action: 'change->form-submit#checkFormValidity' } %>
   </div>
   <div class="col-span-1">
     <%= form.label :date_ended %>
   </div>
   <div class="col-span-4">
-    <%= form.date_field :date_employment_ended, class: 'form-control datepicker', autocomplete: 'off', required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
+    <%= form.date_field :date_employment_ended, class: 'form-control datepicker', autocomplete: 'off', required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm', data: { form_submit_target: "requiredField", action: 'change->form-submit#checkFormValidity' } %>
   </div>
 </div>
