--- a/app/views/personal_data/_form.html.erb
+++ b/app/views/personal_data/_form.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "modal_form_section" do %>
-  <%= form_with model: PersonalDatum.last || @personal_data || PersonalDatum.new, data: { controller: "form-validation", form_validation_target: "form" }, local: true do |form| %>
+  <%= form_with model: PersonalDatum.last || @personal_data || PersonalDatum.new, data: { controller: "form-validation form-submit", form_validation_target: "form" }, local: true do |form| %>
     <% if @personal_data&.errors&.any? %>
       <%= render "shared/errors", object: @personal_data %>
     <% end %>
@@ -10,7 +10,7 @@
       </div>
 
       <div class="col-span-4">
-        <%= form.email_field :email, required: true, id: "email-field", class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm',data: { form_validation_target: "emailField", action: 'keyup->form-validation#validateEmail' } %>
+        <%= form.email_field :email, required: true, id: "email-field", class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm', data: { form_validation_target: "emailField", action: 'keyup->form-validation#validateEmail' } %>
         <p data-form-validation-target="errorField" style="color: red;"></p>
       </div>
 
@@ -19,7 +19,7 @@
       </div>
 
       <div class="col-span-4">
-        <%= form.text_field :first_name, maxlength: 25, required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
+        <%= form.text_field :first_name, maxlength: 25, required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm', data: { form_submit_target: "requiredField", action: 'change->form-submit#checkFormValidity' } %>
       </div>
 
       <div class="col-span-1">
@@ -27,7 +27,7 @@
       </div>
 
       <div class="col-span-4">
-        <%= form.text_field :last_name, maxlength: 50, required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
+        <%= form.text_field :last_name, maxlength: 50, required: true, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm', data: { form_submit_target: "requiredField", action: 'change->form-submit#checkFormValidity' }%>
       </div>
 
       <div class="col-span-1">
@@ -43,12 +43,12 @@
       </div>
 
       <div class="col-span-4">
-        <%= form.phone_field :phone, required: true, pattern: "[0-9]{3}-[0-9]{3}-[0-9]{4}", id: "phone-field", data: { form_validation_target: "phoneField" }, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
+        <%= form.phone_field :phone, required: true, pattern: "[0-9]{3}-[0-9]{3}-[0-9]{4}", id: "phone-field", data: { form_submit_target: "requiredField", form_validation_target: "phoneField", action: 'change->form-submit#checkFormValidity' }, class:'block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm' %>
       </div>
     </div>
 
     <div class="actions">
-      <%= form.submit "Save", class: "inline-flex justify-center items-center px-4 py-2 border border-transparent font-medium rounded-md mt-4 text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500", data: { form_validation_target: "submitButton" } %>
+      <%= form.submit "Save", class: "inline-flex justify-center items-center px-4 py-2 border border-transparent font-medium rounded-md mt-4 text-white bg-blue-600", data: { form_submit_target: "submitButton", form_validation_target: "submitButton" } %>
     </div>
   <% end %>
 <% end %>
