--- a/app/views/employers/_nested_form.html.erb
+++ b/app/views/employers/_nested_form.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit "Save", class: "inline-flex justify-center items-center px-4 py-2 border border-transparent font-medium rounded-md mt-4 text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500", data: {form_submit_target: "submitButton", form_validation_target: "submitButton" } %>
+      <%= form.submit "Save", class: "inline-flex justify-center items-center px-4 py-2 border border-transparent font-medium rounded-md mt-4 text-white", data: {form_submit_target: "submitButton", form_validation_target: "submitButton" } %>
     </div>
   <% end %>
 <% end %>
